--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbModul.html.twig
@@ -213,6 +213,7 @@
         <tr>
             <td>8</td>
             <td colspan="6">
+                {# TODO: wenn leer -> key nicht ausgeben #}
                 <div class="key">Verwendung des Moduls (in anderen Studiengängen)</div>
                 {% for studiengang in modulBeschreibung.getFremdeStudiengaenge() %}
                     {{ studiengang }}<br/>
