Erster Versuch Deaktivierung

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungErstellen.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungErstellen.html.twig
@@ -61,6 +61,8 @@
             {{ form_row(form.pruefungsformen) }}
             {{ form_row(form.PruefungsformSonstiges) }}
             {{ form_row(form.voraussetzungLP) }}
+            {{ form_row(form.PruefungsleistungSonstiges) }}
+            {{ form_row(form.StudienleistungSonstiges) }}
         </table>
 
         {% include '@FHBingenMHB/buttons.html.twig' %}
