--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/modulBearbeiten.html.twig
@@ -105,6 +105,8 @@
             {{ form_row(form.pruefungsformen) }}
             {{ form_row(form.PruefungsformSonstiges) }}
             {{ form_row(form.voraussetzungLP) }}
+            {{ form_row(form.PruefungsleistungSonstiges) }}
+            {{ form_row(form.StudienleistungSonstiges) }}
         </table>
 
         <h4 style="font-weight: bold">Lehrende</h4>
