--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/planungBearbeiten.html.twig
@@ -58,6 +58,8 @@
             {{ form_row(form.pruefungsformen) }}
             {{ form_row(form.PruefungsformSonstiges) }}
             {{ form_row(form.voraussetzungLP) }}
+            {{ form_row(form.PruefungsleistungSonstiges) }}
+            {{ form_row(form.StudienleistungSonstiges) }}
         </table>
 
         {% include '@FHBingenMHB/buttons.html.twig' %}
