--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/layout.html.twig
@@ -6,12 +6,12 @@
     {#<meta name="viewport" content="width=device-width, initial-scale=1">#}
     <title>MHB-VS</title>
 
+    <!-- Tablesorter -->
+    <link href="{{ asset('bundles/fhbingenmhb/css/tablesorter.css') }}" rel="stylesheet"/>
     <!-- Bootstrap -->
     <link href="{{ asset('bundles/fhbingenmhb/css/bootstrap.css') }}" rel="stylesheet"/>
     {#<link href="{{ asset('bundles/fhbingenmhb/css/bootstrap-theme.css') }}" rel="stylesheet"/>#}
-    <!-- Tablesorter -->
-    <link href="{{ asset('bundles/fhbingenmhb/css/tablesorter.css') }}" rel="stylesheet"/>
-    <!-- own styles -->
+        <!-- own styles -->
     <link href="{{ asset('bundles/fhbingenmhb/css/style.css') }}" rel="stylesheet"/>
 
     {#
@@ -25,10 +25,12 @@
 
     <!-- jQuery -->
     <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/jquery-2.1.3.min.js') }}"></script>
+    <!-- jQuery UI -->
+    <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/jquery-ui.min.js') }}"></script>
+    <!-- jQuery Tablesorter -->
+    <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/jquery.tablesorter.min.js') }}"></script>
     <!-- Bootstrap -->
     <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/bootstrap.min.js') }}"></script>
-    <!-- Tablesorter -->
-    <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/jquery.tablesorter.min.js') }}"></script>
     <!-- own scripts -->
     <script type="text/javascript" src="{{ asset('bundles/fhbingenmhb/js/own.js') }}"></script>
 
