--- a/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/public/css/style.css
@@ -91,29 +91,8 @@ body {
     width: 475px;
 }
 
-.modul {
-
-}
-
-.modul table {
-    border-collapse: collapse;
-}
-
-.modul table th, .modul table td {
-    border: 1px solid gray;
-    padding: 0 10px;
-}
-
-.modul div.key {
-    /* Als Basis h4 nach http://www.w3.org/TR/CSS2/sample.html */
-    display: block;
-    unicode-bidi: embed;
-    margin: 0.25em 0;
-    font-weight: bolder;
-    page-break-after: avoid;
-}
-
 div.ourButtons {
     margin-top: 50px;
+    /* TODO: Bei Gelegenheit ändern */
     margin-bottom: 200px;
 }
