--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/jquerySortTest.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/jquerySortTest.html.twig
@@ -41,17 +41,17 @@
     <ul id="sortable1" class="connectedSortable1 connectedSortable2">
     </ul>
     <ul id="sortable2" class="connectedSortable1">
-        <li class="ui-state-highlight">Modul 1.1</li>
-        <li class="ui-state-highlight">Modul 1.2</li>
-        <li class="ui-state-highlight">Modul 1.3</li>
-        <li class="ui-state-highlight">Modul 1.4</li>
-        <li class="ui-state-highlight">Modul 1.5</li>
+        <li>Modul 1.1</li>
+        <li>Modul 1.2</li>
+        <li>Modul 1.3</li>
+        <li>Modul 1.4</li>
+        <li>Modul 1.5</li>
     </ul>
     <ul id="sortable3" class="connectedSortable2">
-        <li class="ui-state-highlight">Modul 2.1</li>
-        <li class="ui-state-highlight">Modul 2.2</li>
-        <li class="ui-state-highlight">Modul 2.3</li>
-        <li class="ui-state-highlight">Modul 2.4</li>
-        <li class="ui-state-highlight">Modul 2.5</li>
+        <li>Modul 2.1</li>
+        <li>Modul 2.2</li>
+        <li>Modul 2.3</li>
+        <li>Modul 2.4</li>
+        <li>Modul 2.5</li>
     </ul>
 {% endblock %}
