--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbErstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbErstellung.html.twig
@@ -52,8 +52,10 @@
     {% endfor %}
 
     {# TODO: vllt vorher $_POST leeren? wegen zurück button im browser #}
-    <form method="POST" action="{{ path('mhbErstellungParsen') }}"> {# testweise #}
-        <input type="hidden" name="Studiengang" value="{{ studiengang }}"/>
+    <form method="POST" action="{{ path('mhbErstellungParsen') }}">
+        {% if(mhbID is not null ) %}
+            <input type="hidden" name="mhb" value="{{ mhbID }}"/>
+        {% endif %}
 
         <h4>MHB</h4>
 
