--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbErstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbErstellung.html.twig
@@ -1,73 +1,32 @@
 {% extends 'FHBingenMHBBundle::layout.html.twig' %}
 
+{% form_theme form _self %}
+
+{% block form_row %}
+    <tr class="form_row">
+        <td>{{ form_label(form) }}</td>
+        <td>{{ form_widget(form) }}</td>
+        <td>{{ form_errors(form) }}</td>
+    </tr>
+{% endblock form_row %}
+
 {% block content %}
-    <style>
-        .angebote, #mhb {
-            /*border: 3px solid #eee;*/
-            width: 300px;
-            min-height: 20px;
-            list-style-type: none;
-            margin: 0;
-            padding: 5px 0 0 0;
-            /*float: left;*/
-            margin-right: 10px;
-        }
-
-        .angebote li, #mhb li {
-            margin: 0 5px 5px 5px;
-            padding: 5px;
-            font-size: 1.2em;
-            width: 288px;
-            /*border: 3px solid #eee;*/
-        }
-
-        .angebote, #mhb, .angebote li, #mhb li {
-            border: 1px solid;
-        }
-    </style>
-
-    <script>
-        {# TODO: Sobald man scrollt geht das Feature kaputt. Warum? #}
-        $(function () {
-            //$("#mhb").sortable();
-            $(".angebote").sortable({
-                connectWith: "#mhb"
-            });
-            $("#mhb").sortable({
-                connectWith: "#mhb, .angebote"
-            });
+    <script type="text/javascript">
+        $(document).ready(function () {
+            <!-- navbar highlighting -->
+            highlightMe(document.getElementById('modulcodeLink'));
         });
     </script>
 
-    {% for key in zuordnung|keys %}
-        <h4>{{ key }}</h4>
-        <ul id="{{ key }}" class="angebote {{ key|replace({' ': '_'}) }}">
-            {% for angebot in zuordnung[key] %}
-                <li>
-                    <input type="hidden" name="{{ angebot }}" value="{{ angebot.getAngebotsID() }}"/>
-                    {{ angebot }}
-                </li>
-            {% endfor %}
-        </ul>
-    {% endfor %}
-
-    {# TODO: vllt vorher $_POST leeren? wegen zurück button im browser #}
-    <form method="POST" action="{{ path('mhbErstellungParsen') }}">
-        {% if(mhbID is not null ) %}
-            <input type="hidden" name="mhb" value="{{ mhbID }}"/>
-        {% endif %}
-
-        <h4>MHB</h4>
-
-        <ul id="mhb" class="
-            mhb
-            {% for key in zuordnung|keys %}
-                {{ key|replace({' ': '_'}) }}
-            {% endfor %}
-        ">
-        </ul>
+    <h3>Modulhndbuch Erstellen</h3>
+    <div class="table-responsive">
+        {{ form_start(form, {attr: {novalidate: 'novalidate'}}) }}
+        <table class="table table-bordered">
+            {{ form_row(form.beschreibung) }}
+            {{ form_row(form.gueltigAb) }}
+        </table>
 
         {% include '@FHBingenMHB/buttons.html.twig' %}
-    </form>
-
+        {{ form_end(form) }}
+    </div>
 {% endblock %}
