modulDeaktivierung in navbar

--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Navigation/sglNav.html.twig
@@ -21,7 +21,7 @@
         </li>
 
         <li role="presentation">
-            <a id="moduldeaktivierungLink" href="#{# {{ path('modulDeaktivierung') }} #}">Moduldeaktivierung</a>
+            <a id="moduldeaktivierungLink" href=" {{ path('modulDeaktivierung') }}">Moduldeaktivierung</a>
         </li>
     {% endif %}
 {% endif %}
