--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbErstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbErstellung.html.twig
@@ -14,7 +14,7 @@
     <script type="text/javascript">
         $(document).ready(function () {
             <!-- navbar highlighting -->
-            highlightMe(document.getElementById('modulcodeLink'));
+            highlightMe(document.getElementById('mhbErstellungLink'));
         });
     </script>
 
