--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulDeaktivierung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulDeaktivierung.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <script type="text/javascript">
         $(document).ready(function () {
-            highlightMe(document.getElementById('eigeneModuleLink'));
+            highlightMe(document.getElementById('moduldeaktivierungLink'));
         });
     </script>
     <div class="table-responsive">
