--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
@@ -27,6 +27,10 @@
     </style>
 
     <script>
+        $(document).ready(function () {
+            highlightMe(document.getElementById('mhbErstellungLink'));
+        });
+
         {# TODO: Sobald man scrollt geht das Feature kaputt. Warum? #}
         $(function () {
             //$("#mhb").sortable();
