--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/mhbZusammenstellung.html.twig
@@ -3,22 +3,18 @@
 {% block content %}
     <style>
         .angebote, #mhb {
-            /*border: 3px solid #eee;*/
             width: 300px;
             min-height: 20px;
             list-style-type: none;
-            margin: 0;
             padding: 5px 0 0 0;
             /*float: left;*/
-            margin-right: 10px;
         }
 
         .angebote li, #mhb li {
             margin: 0 5px 5px 5px;
             padding: 5px;
             font-size: 1.2em;
-            width: 288px;
-            /*border: 3px solid #eee;*/
+            width: 288px; /* 300 - 2 * (5px Abstand + 1px Rand) */
         }
 
         .angebote, #mhb, .angebote li, #mhb li {
