--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerVerwaltung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/benutzerVerwaltung.html.twig
@@ -13,7 +13,7 @@
             <tr>
                 <th>Dozenten</th>
                 <th>Studiengangleiter</th>
-                <th>neuer Nutzer</th>
+                <th>Neuer Nutzer</th>
             </tr>
 
             <tr>
