--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/alleStudiengaenge.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Verwaltung/alleStudiengaenge.html.twig
@@ -20,7 +20,7 @@
                 <tr>
                     <th style="">Studiengang</th>
                     <th style="">Abschluss</th>
-                    <th style="">Studiengangleiter</th>
+                    <th style="">Studiengangleiter/in</th>
                 </tr>
             </thead>
             <tbody>
