--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulDeaktivierung.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/SGL/modulDeaktivierung.html.twig
@@ -36,7 +36,7 @@
             <tr>
                 <th>Modultitel</th>
                 <th style="min-width: 130px; width: 12%">letzte Änderung</th>
-                <th style="min-width: 220px; width: 23%">Modulbeauftragter</th>
+                <th style="min-width: 220px; width: 23%">Modulbeauftragte/r</th>
                 <th style="min-width: 220px; width: 23%">Studiengang</th>
             </tr>
             </thead>
