--- a/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
+++ b/src/FHBingen/Bundle/MHBBundle/Resources/views/Dozent/eigeneModule.html.twig
@@ -11,79 +11,88 @@
     </script>
     <div class="table-responsive">
         <h3>Module als Modulbeauftragter</h3>
-        <table id="modulverantwortlicher" class="table table-bordered tablesorter">
-            <thead>
-            <tr>
-                <th>Modultitel</th>
-                <th style="min-width: 100px; width: 7%">Kürzel</th>
-                <th style="min-width: 130px; width: 12%">Erstelldatum</th>
-                <th style="min-width: 150px; width: 15%">Häufigkeit</th>
-                <th style="min-width: 220px; width: 23%">Lehrende</th>
-                <th style="min-width: 220px; width: 23%">Studiengang</th>
-            </tr>
-            </thead>
-            <tbody>
-            {# count festsetzen für das hochzählen des mLehrende[] #}
-            {# zweite for gibt jeweils Lehrende mit Namen in neue Zeilen aus #}
-            {% set count = 0 %}
-            {% for veranstaltung in modulverantwortung %}
+        {% if modulverantwortung is not empty %}
+            <table id="modulverantwortlicher" class="table table-bordered tablesorter">
+                <thead>
                 <tr>
-                    <td>
-                        <a href="{{ path('modulBearbeiten', {'id': veranstaltung.getModulID()}) }}">{{ veranstaltung.name }}</a>
-                    </td>
-                    <td>{{ veranstaltung.kuerzel }}</td>
-                    {# bei Date wird immer |date('Y-m-d') benötigt um als String zu casten #}
-                    <td>{{ veranstaltung.erstellungsdatum|date('d.m.Y') }}</td>
-                    <td>{{ veranstaltung.haeufigkeit }}</td>
-                    <td>
-                        {% for name in mLehrende[count] %}
-                            {{ name }}<br/>
-                        {% endfor %}
-                    </td>
-                    <td>
-                        {% for name in stgZuModul[count] %}
-                            {{ name }}<br/>
-                        {% endfor %}
-                        <a href=" {{ path('vorAngebot', {'modulID': veranstaltung.getModulID()}) }}">In weiterem Studiengang anbieten</a>
-                    </td>
+                    <th>Modultitel</th>
+                    <th style="min-width: 100px; width: 7%">Kürzel</th>
+                    <th style="min-width: 130px; width: 12%">Erstelldatum</th>
+                    <th style="min-width: 150px; width: 15%">Häufigkeit</th>
+                    <th style="min-width: 220px; width: 23%">Lehrende</th>
+                    <th style="min-width: 220px; width: 23%">Studiengang</th>
                 </tr>
-                {% set count = count +1 %}
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {# count festsetzen für das hochzählen des mLehrende[] #}
+                {# zweite for gibt jeweils Lehrende mit Namen in neue Zeilen aus #}
+                {% set count = 0 %}
+                {% for veranstaltung in modulverantwortung %}
+                    <tr>
+                        <td>
+                            <a href="{{ path('modulBearbeiten', {'id': veranstaltung.getModulID()}) }}">{{ veranstaltung.name }}</a>
+                        </td>
+                        <td>{{ veranstaltung.kuerzel }}</td>
+                        {# bei Date wird immer |date('Y-m-d') benötigt um als String zu casten #}
+                        <td>{{ veranstaltung.erstellungsdatum|date('d.m.Y') }}</td>
+                        <td>{{ veranstaltung.haeufigkeit }}</td>
+                        <td>
+                            {% for name in mLehrende[count] %}
+                                {{ name }}<br/>
+                            {% endfor %}
+                        </td>
+                        <td>
+                            {% for name in stgZuModul[count] %}
+                                {{ name }}<br/>
+                            {% endfor %}
+                            <a href=" {{ path('vorAngebot', {'modulID': veranstaltung.getModulID()}) }}">In weiterem
+                                Studiengang anbieten</a>
+                        </td>
+                    </tr>
+                    {% set count = count +1 %}
+                {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <p>Sie sind bei keinem Modul als Modulbeauftragte/r eingetragen.</p>
+        {% endif %}
 
         <h3 style="margin-top: 50px">Module als Lehrender</h3>
-        <table id="lehrender" class="table table-bordered tablesorter">
-            <thead>
-            <tr>
-                <th>Modultitel</th>
-                <th style="min-width: 100px; width: 7%">Kürzel</th>
-                <th style="min-width: 130px; width: 12%">Erstelldatum</th>
-                <th style="min-width: 150px; width: 15%">Häufigkeit</th>
-                <th style="min-width: 220px; width: 23%">Modulbeauftragter</th>
-                <th style="min-width: 220px; width: 23%">Studiengang</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for veranstaltung in modullehrend %}
+        {% if modullehrend is not empty %}
+            <table id="lehrender" class="table table-bordered tablesorter">
+                <thead>
                 <tr>
-                    <td>
-                        <a href="{{ path('modulBearbeiten', {'id': veranstaltung.getModulID()}) }}">{{ veranstaltung.name }}</a>
-                    </td>
-                    <td>{{ veranstaltung.kuerzel }}</td>
-                    {# bei Date wird immer |date('Y-m-d') benötigt um als String zu casten #}
-                    <td>{{ veranstaltung.erstellungsdatum|date('d.m.Y') }}</td>
-                    <td>{{ veranstaltung.haeufigkeit }}</td>
-                    <td>{{ veranstaltung.beauftragter }}</td>
-                    <td>
-                        {% for name in stgZuModul[count] %}
-                            {{ name }}<br/>
-                        {% endfor %}
-                    </td>
+                    <th>Modultitel</th>
+                    <th style="min-width: 100px; width: 7%">Kürzel</th>
+                    <th style="min-width: 130px; width: 12%">Erstelldatum</th>
+                    <th style="min-width: 150px; width: 15%">Häufigkeit</th>
+                    <th style="min-width: 220px; width: 23%">Modulbeauftragter</th>
+                    <th style="min-width: 220px; width: 23%">Studiengang</th>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {% for veranstaltung in modullehrend %}
+                    <tr>
+                        <td>
+                            <a href="{{ path('modulBearbeiten', {'id': veranstaltung.getModulID()}) }}">{{ veranstaltung.name }}</a>
+                        </td>
+                        <td>{{ veranstaltung.kuerzel }}</td>
+                        {# bei Date wird immer |date('Y-m-d') benötigt um als String zu casten #}
+                        <td>{{ veranstaltung.erstellungsdatum|date('d.m.Y') }}</td>
+                        <td>{{ veranstaltung.haeufigkeit }}</td>
+                        <td>{{ veranstaltung.beauftragter }}</td>
+                        <td>
+                            {% for name in stgZuModul[count] %}
+                                {{ name }}<br/>
+                            {% endfor %}
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <p>Sie sind bei keinem Modul als Lehrende/r eingetragen.</p>
+        {% endif %}
     </div>
 
     {% include '@FHBingenMHB/flashbags.html.twig' %}
